--- a/test-api/src/main/resources/application.properties
+++ b/test-api/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:sqlserver://localhost;Database=ImdbDB;encrypt=true;trustServerCertificate=true;integratedSecurity=true;
